# nano_b_hack

./: .gitignore  api_server.py  app.py  characters.json  main.py  pyproject.toml  quotes.json  render.yaml  start.py  utils.py
design_philosophy/: README.md
frontend/: .env.production
frontend/public/: index.html
frontend/src/: App.css  App.tsx
frontend/src/components/: ComicGenerator.css  ComicGenerator.tsx  ComicSlideshow.css  ComicSlideshow.tsx
src/: __init__.py
src/models/: character.py  comic.py  panel.py  script.py
src/services/: character_manager.py  comic_assembler.py  config_service.py  image_generator.py  panel_reference.py  script_generator.py  script_parser.py
src/utils/: file_utils.py  image_utils.py
